WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52638
ASSERT in plug-in code when going to youtube
https://bugs.webkit.org/show_bug.cgi?id=52638
Summary
ASSERT in plug-in code when going to youtube
Anders Carlsson
Reported
2011-01-18 10:22:32 PST
ASSERT in plug-in code when going to youtube
Attachments
Patch
(1.15 KB, patch)
2011-01-18 10:23 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-01-18 10:23:02 PST
Created
attachment 79293
[details]
Patch
Anders Carlsson
Comment 2
2011-01-18 10:24:20 PST
Committed
r76036
: <
http://trac.webkit.org/changeset/76036
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug