2011-01-18  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        ASSERT in plug-in code when going to youtube
        https://bugs.webkit.org/show_bug.cgi?id=52638

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::paintEntirePlugin):
        Don't try to paint the plug-in if the plug-in frame is empty.


Canonical link: https://commits.webkit.org/66274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76036 268f45cc-cd09-0410-ab3c-d52691b4dbfc